fix contrast

--- a/src/styles/all.css
+++ b/src/styles/all.css
@@ -20,7 +20,7 @@ body {
 
 /* Colors and Fonts */
 .footer {
-  background-color: #607d8b;
+  background-color: #1a475c;
   color: #fff;
   display: flex;
   flex-direction: column;
